[package]
name = "bellman-verifier"
version = "0.1.0"
authors = ["osuke <dish230@gmail.com>"]
edition = "2018"

[dependencies]
rand = { version = "0.4", default-features = false }
pairing = { package = "zerochain-pairing", path = "../pairing", default-features = false }
byteorder = { version = "1", default-features = false }
serde = { version = "1.0", optional = true, default-features = false }
serde_derive = { version = "1.0", optional = true }
substrate-primitives = { git = "https://github.com/osuketh/substrate.git", branch = "patch-zerochain", default-features = false }

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.2'

[features]
default = ["std"]
std = [
    "parity-codec/std",
    "serde",
	"serde/std",
	"serde_derive",
    "substrate-primitives/std",
    "rand/std",
    "pairing/std",
    "byteorder/std"
]
