[package]
name = "keys"
version = "0.1.0"
authors = ["Osuke Sudo <dish230@gmail.com>"]
edition = "2018"

[dependencies]
pairing = { package = "zerochain-pairing", path = "../pairing", default-features = false }
jubjub = { path = "../jubjub", default-features = false }
rand = { version = "0.4", default-features = false }

[dependencies.primitives]
default_features = false
git = 'https://github.com/osuketh/substrate.git'
package = 'substrate-primitives'
branch = "patch-zerochain"

[dependencies.blake2-rfc]
git = "https://github.com/gtank/blake2-rfc"
rev = "7a5b5fc99ae483a0043db7547fb79a6fa44b88a9"
default-features = false

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.2'

[features]
default = ["std"]
std = [
    "parity-codec/std",
    "pairing/std",
    "jubjub/std",
    "blake2-rfc/std",
    "rand/std"
]
