[package]
name = "zero-chain-primitives"
version = "0.1.0"
authors = ["osuke <dish230@gmail.com>"]
edition = "2018"

[dependencies]
parity-codec = { version = "3.1", default-features = false }
parity-codec-derive = { version = "3.1", default-features = false }
serde = { version = "1.0", optional = true, default-features = false }
serde_derive = { version = "1.0", optional = true }
byteorder = { version = "1", default-features = false }
pairing = { package = "zero-chain-pairing", path = "../pairing", default-features = false }
bellman-verifier = { path = "../bellman-verifier", default-features = false }
jubjub = { path = "../jubjub", default-features = false }
zcrypto = { package = "zero-chain-crypto", path = "../crypto", default-features = false }
rand = { version = "0.4", default-features = false }
fixed-hash = { version = "0.3.0", default-features = false }
substrate-primitives = { git = "https://github.com/paritytech/substrate", rev = '9112a28af677b75cd6f935dda34d283bb4f676e7', default-features = false }
runtime-primitives = { package = "sr-primitives", git = "https://github.com/paritytech/substrate", rev = '9112a28af677b75cd6f935dda34d283bb4f676e7', default-features = false }
keys = { path = "../keys", default-features = false }
hex-literal = '0.1'

[dependencies.blake2-rfc]
git = "https://github.com/gtank/blake2-rfc"
rev = "7a5b5fc99ae483a0043db7547fb79a6fa44b88a9"
default-features = false

[dependencies.lazy_static]
version = "1"
features = ["spin_no_std"]

[features]
default = ["std"]
std = [	
	"parity-codec/std",   
	"parity-codec-derive/std",
	"serde",
	"serde/std",
	"serde_derive",
	"byteorder/std",	
	"pairing/std",
	"bellman-verifier/std",	
	"jubjub/std",
	"zcrypto/std",
	"rand/std",
	"blake2-rfc/std",	
	"fixed-hash/std",
	"substrate-primitives/std",
	"runtime-primitives/std",
	"keys/std"
]
