[package]
name = "zerochain-primitives"
version = "0.1.0"
authors = ["osuke <dish230@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, default-features = false }
serde_derive = { version = "1.0", optional = true }
byteorder = { version = "1", default-features = false }
pairing = { package = "zerochain-pairing", path = "../pairing", default-features = false }
bellman-verifier = { path = "../bellman-verifier", default-features = false }
jubjub = { path = "../jubjub", default-features = false }
zcrypto = { package = "zerochain-crypto", path = "../crypto", default-features = false }
rand = { version = "0.4", default-features = false }
fixed-hash = { version = "0.3.0", default-features = false }
substrate-primitives = { git = "https://github.com/osuketh/substrate.git", branch = "patch-zerochain", default-features = false }
runtime-primitives = { package = "sr-primitives", git = "https://github.com/osuketh/substrate.git", branch = "patch-zerochain", default-features = false }
keys = { path = "../keys", default-features = false }
hex-literal = '0.1'

[dependencies.blake2-rfc]
git = "https://github.com/gtank/blake2-rfc"
rev = "7a5b5fc99ae483a0043db7547fb79a6fa44b88a9"
default-features = false

[dependencies.lazy_static]
version = "1"
features = ["spin_no_std"]

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.2'

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"serde",
	"serde/std",
	"serde_derive",
	"byteorder/std",
	"pairing/std",
	"bellman-verifier/std",
	"jubjub/std",
	"zcrypto/std",
	"rand/std",
	"blake2-rfc/std",
	"fixed-hash/std",
	"substrate-primitives/std",
	"runtime-primitives/std",
	"keys/std"
]
