[package]
name = "zero-chain-proofs"
version = "0.1.0"
authors = ["osuke <dish230@gmail.com>"]
edition = "2018"

[dependencies]
pairing = { git = "https://github.com/LayerXcom/librustzcash", branch = "zero-chain" }
bellman = { git = "https://github.com/LayerXcom/librustzcash", branch = "zero-chain" }
scrypto = { package = "sapling-crypto", git = "https://github.com/LayerXcom/librustzcash", branch = "zero-chain" }
rand = "0.4"
byteorder = "1"
zcrypto = { package = "zero-chain-crypto", path = "../crypto" }
bellman-verifier = { path = "../bellman-verifier" }
hex-literal = '0.1'

[dependencies.blake2-rfc]
git = "https://github.com/gtank/blake2-rfc"
rev = "7a5b5fc99ae483a0043db7547fb79a6fa44b88a9"

[features]
default = []
multithread = [
    "bellman/multithread",
    "scrypto/multithread",
]
