[package]
name = "zerochain-proofs"
version = "0.1.0"
authors = ["osuke <dish230@gmail.com>"]
edition = "2018"

[dependencies]
pairing = { git = "https://github.com/LayerXcom/librustzcash", branch = "zero-chain" }
bellman = { git = "https://github.com/LayerXcom/librustzcash", branch = "zero-chain" }
scrypto = { package = "sapling-crypto", git = "https://github.com/LayerXcom/librustzcash", branch = "zero-chain" }
rand = "0.4"
byteorder = "1"
zcrypto = { package = "zerochain-crypto", path = "../crypto" }
bellman-verifier = { path = "../bellman-verifier" }
hex-literal = '0.1'
parity-codec = "3.1"
parity-codec-derive = "3.1"
keys = { path = "../keys"}
zjubjub = { package = "jubjub", path = "../jubjub" }

[dependencies.primitives]
git = 'https://github.com/osuketh/substrate.git'
package = 'substrate-primitives'
branch = "patch-zerochain"

[dependencies.blake2-rfc]
git = "https://github.com/gtank/blake2-rfc"
rev = "7a5b5fc99ae483a0043db7547fb79a6fa44b88a9"
