[package]
name = "zero-chain-demo"
version = "0.1.0"
authors = ["osuke <dish230@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.4"
proofs = { package = "zero-chain-proofs", path = "../../proofs" }
structopt = "0.2"
clap = "~2.32"
substrate-primitives = { git = "https://github.com/paritytech/substrate", rev = '9112a28af677b75cd6f935dda34d283bb4f676e7' }
zpairing = { package = "zero-chain-pairing", path = "../../pairing" }
pairing = { git = "https://github.com/LayerXcom/librustzcash", branch = "zero-chain" }
bellman = { git = "https://github.com/LayerXcom/librustzcash", branch = "zero-chain" }
scrypto = { package = "sapling-crypto", git = "https://github.com/LayerXcom/librustzcash", branch = "zero-chain" }
bellman-verifier = { path = "../../bellman-verifier"}
zcrypto = { package = "zero-chain-crypto", path = "../../crypto"}
zprimitives = { package = "zero-chain-primitives", path = "../../primitives" }
zjubjub = { package = "jubjub", path = "../../jubjub"}
parity-codec-derive = { version = "3.1" }
parity-codec = { version = "3.1" }
lazy_static = "1.3.0"
byteorder = "1"
keys = { path = "../../keys" }

[dependencies.blake2-rfc]
git = "https://github.com/gtank/blake2-rfc"
rev = "7a5b5fc99ae483a0043db7547fb79a6fa44b88a9"
