[package]
name = "zero-chain-cli"
version = "0.1.0"
authors = ["osuke <dish230@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.4"
proofs = { package = "zero-chain-proofs", path = "../../core/proofs" }
clap = "~2.32"
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate", rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7' }
zpairing = { package = "zero-chain-pairing", path = "../../core/pairing" }
pairing = { git = "https://github.com/LayerXcom/librustzcash", branch = "zero-chain" }
bellman = { git = "https://github.com/LayerXcom/librustzcash", branch = "zero-chain" }
scrypto = { package = "sapling-crypto", git = "https://github.com/LayerXcom/librustzcash", branch = "zero-chain" }
bellman-verifier = { path = "../../core/bellman-verifier"}
zcrypto = { package = "zero-chain-crypto", path = "../../core/crypto"}
zprimitives = { package = "zero-chain-primitives", path = "../../core/primitives" }
zjubjub = { package = "jubjub", path = "../../core/jubjub"}
lazy_static = "1.3.0"
byteorder = "1"
keys = { path = "../../core/keys" }
wasm-utils = {package = "zerochain-wasm-utils", path = "../wasm-utils"}
hex = "0.3.2"

[dependencies.blake2-rfc]
git = "https://github.com/gtank/blake2-rfc"
rev = "7a5b5fc99ae483a0043db7547fb79a6fa44b88a9"
