[package]
name = "zerochain-wasm-utils"
version = "0.1.0"
authors = ["Osuke Sudo <dish230@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
rand = "0.4"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
zjubjub = { package = "jubjub", path = "../../core/jubjub"}
zpairing = { package = "zero-chain-pairing", path = "../../core/pairing" }
pairing = { git = "https://github.com/LayerXcom/librustzcash", branch = "zero-chain" }
keys = { path = "../../core/keys" }
scrypto = { package = "sapling-crypto", git = "https://github.com/LayerXcom/librustzcash", branch = "zero-chain" }
proofs = { package = "zero-chain-proofs", path = "../../core/proofs" }
bellman = { git = "https://github.com/LayerXcom/librustzcash", branch = "zero-chain" }
zcrypto = { package = "zero-chain-crypto", path = "../../core/crypto"}
bellman-verifier = { path = "../../core/bellman-verifier"}
zprimitives = { package = "zero-chain-primitives", path = "../../core/primitives" }
parity-codec-derive = { version = "3.1" }
parity-codec = { version = "3.1" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[dependencies.blake2-rfc]
git = "https://github.com/gtank/blake2-rfc"
rev = "7a5b5fc99ae483a0043db7547fb79a6fa44b88a9"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
