[package]
name = "srml-aura"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
hex-literal = "0.1.0"
parity-codec = { version = "3.2", default-features = false, features = ["derive"] }
parity-codec-derive = { version = "3.1", default-features = false }
serde = { version = "1.0", optional = true }
inherents = { package = "substrate-inherents", git = "https://github.com/osuketh/substrate.git", branch = "patch-zerochain", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/osuketh/substrate.git", branch = "patch-zerochain", default-features = false }
primitives = { package = "sr-primitives", git = "https://github.com/osuketh/substrate.git", branch = "patch-zerochain", default-features = false }
srml-support = { git = "https://github.com/osuketh/substrate.git", branch = "patch-zerochain", default-features = false }
system = { package = "srml-system", path = "../system", default-features = false }
timestamp = { package = "srml-timestamp", path = "../timestamp", default-features = false }
staking = { package = "srml-staking", path = "../staking", default-features = false }
session = { package = "srml-session", path = "../session", default-features = false }

[dev-dependencies]
lazy_static = "1.0"
parking_lot = "0.7.1"
substrate-primitives = { git = "https://github.com/osuketh/substrate.git", branch = "patch-zerochain" }
runtime_io = { package = "sr-io", git = "https://github.com/osuketh/substrate.git", branch = "patch-zerochain" }
consensus = { package = "srml-consensus", path = "../consensus" }

[features]
default = ["std"]
std = [
	"serde",
	"parity-codec/std",
	"rstd/std",
	"srml-support/std",
	"primitives/std",
	"system/std",
	"timestamp/std",
	"staking/std",
	"inherents/std",
]
