[package]
name = "encrypted-assets"
version = "0.1.0"
authors = ["Osuke Sudo <dish230@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pairing = { package = "zerochain-pairing", path = "../../core/pairing", default-features = false }
zprimitives = { package = "zerochain-primitives", path = "../../core/primitives", default-features = false }
jubjub = { path = "../../core/jubjub", default-features = false }
zcrypto = { package = "zerochain-crypto", path = "../../core/crypto", default-features = false }
keys = { path = "../../core/keys", default-features = false }
system = { package = "srml-system", path = "../system", default-features = false }
encrypted-balances = { path =  "../encrypted-balances", default-features = false }
zk-system = { path =  "../zk-system", default-features = false }

[dev-dependencies]
hex-literal = '0.1'
rand = "0.4"
zface = { path = "../../zface" }
test-pairing = { package = "pairing", git = "https://github.com/LayerXcom/librustzcash", branch = "zero-chain" }
scrypto = { package = "sapling-crypto", git = "https://github.com/LayerXcom/librustzcash", branch = "zero-chain" }
test-proofs = { package = "zerochain-proofs", path = "../../core/proofs" }
bellman-verifier = { path = "../../core/bellman-verifier" }

[dependencies.support]
default_features = false
git = 'https://github.com/osuketh/substrate.git'
package = 'srml-support'
branch = "patch-zerochain"

[dependencies.rstd]
default_features = false
git = 'https://github.com/osuketh/substrate.git'
package = 'sr-std'
branch = "patch-zerochain"

[dependencies.runtime-primitives]
default_features = false
git = 'https://github.com/osuketh/substrate.git'
package = 'sr-primitives'
branch = "patch-zerochain"

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/osuketh/substrate.git'
package = 'sr-io'
branch = "patch-zerochain"

[dependencies.primitives]
default_features = false
git = 'https://github.com/osuketh/substrate.git'
package = 'substrate-primitives'
branch = "patch-zerochain"

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.2'

[dependencies.serde]
optional = true
version = '1.0'

[dependencies.serde_derive]
optional = true
version = '1.0'

[features]
default = ['std']
std = [
    'parity-codec/std',
    'primitives/std',
    'rstd/std',
    'runtime-primitives/std',
    'runtime-io/std',
    "pairing/std",
	"zprimitives/std",
	"jubjub/std",
	"keys/std",
    'system/std',
    'encrypted-balances/std',
    'zk-system/std',
    'serde_derive',
    'serde',
]
