[package]
name = "srml-executive"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
hex-literal = "0.1.0"

[dependencies.serde]
default-features = false
version = '1.0'

[dependencies.parity-codec]
default-features = false
version = '3.1'

[dependencies.parity-codec-derive]
default-features = false
version = '3.1'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.srml-support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-indices'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.substrate-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = '59d5ec144704cec017a01f3e4dbb6b73c5542bf7'

[features]
default = ["std"]
std = [
	"rstd/std",
	"srml-support/std",
	"serde/std",
	"parity-codec/std",
	'parity-codec-derive/std',
	"primitives/std",
	"system/std",
	"substrate-primitives/std",
	'runtime-io/std',
	"balances/std",
]
