[package]
name = "srml-executive"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
hex-literal = "0.1.0"

[dependencies.serde]
default-features = false
version = '1.0'

[dependencies.parity-codec]
default-features = false
version = '3.1'

[dependencies.parity-codec-derive]
default-features = false
version = '3.1'

[dependencies.rstd]
default_features = false
git = 'https://github.com/osuketh/substrate.git'
package = 'sr-std'
branch = "patch-zerochain"

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/osuketh/substrate.git'
package = 'sr-io'
branch = "patch-zerochain"

[dependencies.primitives]
default_features = false
git = 'https://github.com/osuketh/substrate.git'
package = 'sr-primitives'
branch = "patch-zerochain"

[dependencies.srml-support]
default_features = false
git = 'https://github.com/osuketh/substrate.git'
branch = "patch-zerochain"

[dependencies.system]
default_features = false
git = 'https://github.com/osuketh/substrate.git'
package = 'srml-system'
branch = "patch-zerochain"

[dependencies.indices]
default_features = false
git = 'https://github.com/osuketh/substrate.git'
package = 'srml-indices'
branch = "patch-zerochain"

[dependencies.substrate-primitives]
default_features = false
git = 'https://github.com/osuketh/substrate.git'
branch = "patch-zerochain"

[dependencies.balances]
default_features = false
git = 'https://github.com/osuketh/substrate.git'
package = 'srml-balances'
branch = "patch-zerochain"

[features]
default = ["std"]
std = [
	"rstd/std",
	"srml-support/std",
	"serde/std",
	"parity-codec/std",
	'parity-codec-derive/std',
	"primitives/std",
	"system/std",
	"substrate-primitives/std",
	'runtime-io/std',
	"balances/std",
]
