[package]
name = "srml-executive"
version = "0.1.0"
authors = [
	"Parity Technologies <admin@parity.io>",
	"Osuke Sudo <osuke.sudo@layerx.co.jp>",
	]
edition = "2018"

[dependencies]
hex-literal = "0.1.0"
system = { package = "srml-system", path = "../system", default-features = false }
indices = { package = "srml-indices", path = "../indices", default-features = false }
balances = { package = "srml-balances", path = "../balances", default-features = false }

[dependencies.serde]
default-features = false
version = '1.0'

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.2'

[dependencies.rstd]
default_features = false
git = 'https://github.com/osuketh/substrate.git'
package = 'sr-std'
branch = "patch-zerochain"

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/osuketh/substrate.git'
package = 'sr-io'
branch = "patch-zerochain"

[dependencies.primitives]
default_features = false
git = 'https://github.com/osuketh/substrate.git'
package = 'sr-primitives'
branch = "patch-zerochain"

[dependencies.srml-support]
default_features = false
git = 'https://github.com/osuketh/substrate.git'
branch = "patch-zerochain"

[dependencies.substrate-primitives]
default_features = false
git = 'https://github.com/osuketh/substrate.git'
branch = "patch-zerochain"

[features]
default = ["std"]
std = [
	"rstd/std",
	"srml-support/std",
	"serde/std",
	"parity-codec/std",
	"primitives/std",
	"system/std",
	"substrate-primitives/std",
	'runtime-io/std',
	"balances/std",
]
