[package]
name = "srml-staking"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
hex-literal = "0.1.0"
serde = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false}
parity-codec = { version = "3.2", default-features = false, features = ["derive"] }
substrate-keyring = { git = "https://github.com/osuketh/substrate.git", branch = "patch-zerochain", optional = true }
rstd = { package = "sr-std", git = "https://github.com/osuketh/substrate.git", branch = "patch-zerochain", default-features = false }
runtime_io = { package = "sr-io", git = "https://github.com/osuketh/substrate.git", branch = "patch-zerochain", default-features = false }
primitives = { package = "sr-primitives", git = "https://github.com/osuketh/substrate.git", branch = "patch-zerochain", default-features = false }
srml-support = { git = "https://github.com/osuketh/substrate.git", branch = "patch-zerochain", default-features = false }
consensus = { package = "srml-consensus", path = "../consensus", default-features = false }
system = { package = "srml-system", path = "../system", default-features = false }
session = { package = "srml-session", path = "../session", default-features = false }

[dev-dependencies]
substrate-primitives = { git = "https://github.com/osuketh/substrate.git", branch = "patch-zerochain" }
timestamp = { package = "srml-timestamp", path = "../timestamp" }
balances = { package = "srml-balances", path = "../balances" }

[features]
default = ["std"]
std = [
	"serde",
	"safe-mix/std",
	"substrate-keyring",
	"parity-codec/std",
	"rstd/std",
	"runtime_io/std",
	"srml-support/std",
	"primitives/std",
	"session/std",
	"system/std",
]
